# iceMusic

./: Dockerfile  README.md  config.json  railway.toml  requirements.txt  run.py
config/: __init__.py  build-requirements.txt  build.py  config.py  db-requirements.txt  en.json  language.txt  pyproject.toml  setup.py  update-deps.py  update-dockerfile.py  utils.py
config/MusicBot_DB.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/cookies/: cookies.txt
musicbot/: __init__.py  __main__.py  audiocontroller.py  bot.py  linkutils.py  loader.py  playlist.py  settings.py  song.py  the_truth.txt  utils.py
musicbot/commands/: developer.py  general.py  moderation.py  music.py
musicbot/plugins/: ban.py  button.py  kick.py
musicbot/yt_dlp_plugins/extractor/: discord.py  suno.py
