[build-system]
requires = [
   "setuptools==69.5.1",
   "wheel==0.43.0",
   "tomli==2.0.1; python_version<'3.11'",
   "packaging==24.0",
   "json-with-comments==1.2.5",
]

[project]
name = "iceC-Music"
description = "Package that installs DB library and jsonc as dependencies"
version = "0.0.3"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "db.txt"}
